--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">Your Partner in Efficient HR Management</h1>
+                        <h1 class="text-white font-weight-bold">NIE Changes</h1>
                         <hr class="divider-white" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
@@ -55,7 +55,7 @@
         <!-- Services-->
         <section class="page-section pt-5-5" id="services">
             <div class="container px-4 px-lg-4">
-                <h2 class="text-center mt-0">At Your Service</h2>
+                <h2 class="text-center mt-0">This part has been changed</h2>
                 <hr class="divider" />
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 text-center">
